kubernetes/production_cloud_frontend_aws/authentication-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmanager-authentication
  labels:
    project: meicm-bm
    name: bookmanager-authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bookmanager-authentication
  template:
    metadata:
      labels:
        project: meicm-bm
        name: bookmanager-authentication
    spec:
      containers:
      - name: bookmanager-authentication
        ports:
        - containerPort: 10002
        image: 228513434769.dkr.ecr.eu-west-1.amazonaws.com/meicm_bookmanager:bookmanager_authentication_service_1.0.4
        imagePullPolicy: IfNotPresent
        resources: {}
      restartPolicy: Always
