kubernetes/production_cloud_frontend_aws/data-gatherer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmanager-data-gatherer
  labels:
    project: meicm-bm
    name: bookmanager-data-gatherer
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bookmanager-data-gatherer
  template:
    metadata:
      labels:
        project: meicm-bm
        name: bookmanager-data-gatherer
    spec:
      containers:
      - name: bookmanager-data-gatherer
        ports:
        - containerPort: 10004
        image: 228513434769.dkr.ecr.eu-west-1.amazonaws.com/meicm_bookmanager:bookmanager_data_gatherer_service_1.0.4
        imagePullPolicy: IfNotPresent
        resources: {}
      restartPolicy: Always
