kubernetes/production_cloud_frontend_aws/gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmanager-gateway
  labels:
    name: bookmanager-gateway
    project: meicm-bm
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bookmanager-gateway
  template:
    metadata:
      labels:
        name: bookmanager-gateway
        project: meicm-bm
    spec:
      containers:
      - image: 228513434769.dkr.ecr.eu-west-1.amazonaws.com/meicm_bookmanager:bookmanager_gateway_service_1.0.4
        name: bookmanager-gateway
        imagePullPolicy: IfNotPresent
        resources: {}
        ports:
        - containerPort: 80
      restartPolicy: Always
