kubernetes/production_cloud_frontend_aws/history-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmanager-history
  labels:
    project: meicm-bm
    name: bookmanager-history
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bookmanager-history
  template:
    metadata:
      labels:
        project: meicm-bm
        name: bookmanager-history
    spec:
      containers:
      - name: bookmanager-history
        ports:
        - containerPort: 10000
        image: 228513434769.dkr.ecr.eu-west-1.amazonaws.com/meicm_bookmanager:bookmanager_history_service_1.0.4
        imagePullPolicy: IfNotPresent
        resources: {}
      restartPolicy: Always
