kubernetes/production_cloud_frontend_aws/statistics-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmanager-statistics
  labels:
    project: meicm-bm
    name: bookmanager-statistics
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bookmanager-statistics
  template:
    metadata:
      labels:
        project: meicm-bm
        name: bookmanager-statistics
    spec:
      containers:
      - name: bookmanager-statistics
        ports:
        - containerPort: 10005
        image: 228513434769.dkr.ecr.eu-west-1.amazonaws.com/meicm_bookmanager:bookmanager_statistics_service_1.0.4
        imagePullPolicy: IfNotPresent
        resources: {}
      restartPolicy: Always
