kubernetes/production_cloud_frontend_aws/tracking-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmanager-tracking
  labels:
    project: meicm-bm
    name: bookmanager-tracking
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bookmanager-tracking
  template:
    metadata:
      labels:
        project: meicm-bm
        name: bookmanager-tracking
    spec:
      containers:
      - name: bookmanager-tracking
        ports:
        - containerPort: 10003
        image: 228513434769.dkr.ecr.eu-west-1.amazonaws.com/meicm_bookmanager:bookmanager_tracking_service_1.0.4
        imagePullPolicy: IfNotPresent
        resources: {}
      restartPolicy: Always
