kubernetes/production_cloud_frontend_aws/history-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  bookmanager-history
  labels:
    name: bookmanager-history
spec:
  selector:
    name: bookmanager-history
  type:  ClusterIP
  ports:
  - port:  10000
    targetPort:  10000
