kubernetes/production_cloud_frontend_aws/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: meicm-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: api.bookmanager.meicm
      http:
        paths:
          - path: /(api/history)(.*)
            backend:
              serviceName: bookmanager-history
              servicePort: 10000
          - path: /(api/search)(.*)
            backend:
              serviceName: bookmanager-search
              servicePort: 10001
          - path: /(api/signin)(.*)
            backend:
              serviceName: bookmanager-authentication
              servicePort: 10002
          - path: /(api/books)(.*)
            backend:
              serviceName: bookmanager-tracking
              servicePort: 10003
          - path: /(api/trigger)(.*)
            backend:
              serviceName: bookmanager-data-gatherer
              servicePort: 10004
          - path: /(api/statistics)(.*)
            backend:
              serviceName: bookmanager-statistics
              servicePort: 10005
